# iced-layout

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  docs_plan.md
.github/workflows/: docs.yml
core/: Cargo.toml
core/src/: lib.rs
docs/: package.json
docs/.vitepress/: config.mts
docs/docs-gen/: Cargo.toml
docs/docs-gen/src/: main.rs
docs/pages/: index.md  roadmap.md
docs/pages/guide/: custom-widgets.md  getting-started.md  loops-and-conditions.md  state-access.md  xml-format.md
examples/: Cargo.toml  build.rs
examples/page/: test-layout.xml
examples/src/: demo.rs
hot-reload/: Cargo.toml
hot-reload/src/: lib.rs
macro/: Cargo.toml
macro/src/: generate.rs  interpolation.rs  lib.rs  style.rs  types.rs
schema/: 0.14.0.xsd
schemas/: 0.0.1.xsd  0.0.2.xsd
src/: lib.rs
xml/: Cargo.toml
xml/src/: attr.rs  lib.rs  node.rs  style.rs
